--- a/env.yml
+++ b/env.yml
@@ -7,4 +7,5 @@ dependencies:
   - symuvia=1.0.0
   - pip
   - pip:
-      - git+https://github.com/licit-lab/symupy@dev
+      - CProfileV
+      - git+https://github.com/licit-lab/symupy@feature/trajectoryparser
