📌 Obj tracing + profilers

--- a/env.yaml
+++ b/env.yaml
@@ -5,7 +5,10 @@ channels:
 dependencies:
   - python=3.9
   - symuflow=1.0.0
+  - pylint
   - pip
   - pip:
       - CProfileV
-      - git+https://github.com/licit-lab/symupy@dev
+      - pyinstrument
+      - objgraph
+      - git+https://github.com/licit-lab/symupy@feature/alter-route
