--- a/env.yaml
+++ b/env.yaml
@@ -4,11 +4,13 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
-  - symuflow=1.0.0
+  - pylint
+  - black
+  - symuflow=1.1.0
+  - symupy=1.0.0
   - pylint
   - pip
   - pip:
       - CProfileV
       - pyinstrument
       - objgraph
-      - git+https://github.com/licit-lab/symupy@feature/alter-route
